--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
